# admedi

./: .env  .env.example  .gitattributes  .gitignore  CLAUDE.md  PROJECT_STATE.md  README.md  agents.md  countries.yaml  networks.yaml  profiles.yaml  pyproject.toml
docs/: admedi-revenue-optimization-vision.md  api-configuration-capabilities.md  core-auth-reads-design-review.md  core-auth-reads-design.md  core-auth-reads-examiner.md  core-auth-reads-plan-review.md  core-auth-reads-plan.md  core-auth-reads-results.md  core-config-engine-design-review.md  core-config-engine-design.md  core-config-engine-examiner.md  core-config-engine-plan-review.md  core-config-engine-plan.md  core-config-engine-results.md  core-foundation-design.md  core-foundation-plan-review.md  core-foundation-plan.md  core-foundation-results.md  core-milestone-spec.md  core-milestone-summary.md  core-settings-redesign-design-review.md  core-settings-redesign-design.md  core-settings-redesign-plan-review.md  core-settings-redesign-plan.md  core-settings-redesign-results.md  core-snapshot-unify-design-review.md  core-snapshot-unify-design.md  core-snapshot-unify-plan-review.md  core-snapshot-unify-plan.md  core-snapshot-unify-results.md  core-sync-networks-cli-demo.md  core-sync-networks-design-review.md  core-sync-networks-design.md  core-sync-networks-plan-review.md  core-sync-networks-plan.md  core-sync-networks-results.md  core-sync-ux-design-review.md  core-sync-ux-design.md  core-sync-ux-plan-review.md  core-sync-ux-plan.md  (+14 more)
examples/: shelf-sort-tiers.yaml
settings/: hexar-google-networks.yaml  (+14 more)
(+81 files in other folders)
